--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "private": true,
   "scripts": {
     "start": "cross-env PORT=8001 UMI_ENV=dev umi dev",
+    "dev": "cross-env UMI_ENV=dev umi build",
     "build": "umi build",
     "postinstall": "umi generate tmp",
     "prettier": "prettier --write '**/*.{js,jsx,tsx,ts,less,md,json}'",
