--- a/package.json
+++ b/package.json
@@ -22,12 +22,16 @@
   },
   "dependencies": {
     "@ant-design/pro-layout": "^6.5.0",
+    "@tinymce/tinymce-react": "^4.2.0",
     "antd": "^4.20.2",
+    "antd-img-crop": "^4.2.4",
     "axios": "^0.27.2",
+    "braft-editor": "^2.3.9",
     "cross-env": "^7.0.3",
     "react": "^17.0.2",
     "react-dom": "17.x",
-    "umi": "^3.5.23"
+    "umi": "^3.5.23",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@types/react": "^17.0.0",
