--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "cross-env": "^7.0.3",
     "react": "^17.0.2",
     "react-dom": "17.x",
+    "styled-components": "^5.2.1",
     "umi": "^3.5.23",
     "yarn": "^1.22.19"
   },
@@ -41,6 +42,8 @@
     "lint-staged": "^10.0.7",
     "prettier": "^2.2.0",
     "typescript": "^4.1.2",
-    "yorkie": "^2.0.0"
+    "yorkie": "^2.0.0",
+    "@types/styled-components": "^5.1.7",
+    "babel-plugin-styled-components": "^1.12.0"
   }
 }
